--- a/README
+++ b/README
@@ -2,6 +2,8 @@ IPS-MikroTik-Suricata es una implementación de un módulo que se conecta a la b
 
 Inspirado en un post de Tom Fisk del foro de MikroTik: http://forum.mikrotik.com/viewtopic.php?t=111727
 
+Mirar la wiki para ver documentación: https://github.com/elmaxid/ips-mikrotik-suricata/wiki/Instalaci%C3%B3n-y-Uso
+
 Requerimientos:
 
 * Suricata funcionando
