--- a/README.EN
+++ b/README.EN
@@ -58,7 +58,7 @@ cd /opt
 
 git clone https://github.com/elmaxid/ips-mikrotik-suricata.git
 
-cd ips-mikrotik-suricata.git
+cd ips-mikrotik-suricata
 
 -- to Config
 
@@ -74,7 +74,7 @@ php -f mikrotik-ips-install.php
 
 * To run, just set the permision 
 
-chmod 777 /opt/ps-mikrotik-suricata.git/ips_start.sh 
+chmod 777 /opt/ips-mikrotik-suricata/ips_start.sh 
 
 * Edit the file ip_start.sh with the correct path and run it
 
